# stafo

./: .gitignore  Fragen.md  README.md  _example_config.toml  irkpackage.toml  keys.txt  main_test1.py  pyproject.toml  requirements.txt  statement_to_kg.py
data/: already_processed0.tex  chunk_full_source.tex  formalized_statements0.md  goal.md  prompt01_template.md
data/V0/: V0_all.tex  formalized_statements_v0.md
data/memristor/: README.md  example_output.py  formalized_statements.md
data/pdf-generation/: defnsDec2015Hyperref.tex  main.tex
data/templates/: and_or_not_template.py  basic_entity_template.py  basic_item_template.py  basic_relation_template.py  definition_template.py  equation_template.py  equivalence_template.py  html_equation_info_template.html  html_tooltip_template.html  integer_range_template.py  latex_template.py  markup_complete_template.html  markup_complete_template.py  math_relation_template.py  nested_statement_template.py  prompt01_template.md  prompt01_template_german.md  prompt01_template_v0.md  prompt02_annotate_latex_template.md  prompt02b_annotate_equations_template.md  prompt03_patch_old_fnl_template.md  prompt04_quality_control_template.md  pyirk_template.py  statement_template.py  task_template.md
html/: config.cfg  dynamic.bib  kapitel_2_1.tex  nl_latex_copy.tex  tt_style.html
snapshots/V0/: sn100_0.md  sn101_0.md  sn102_0.md  sn103_0.md  sn104_0.md  sn105_0.md  sn106_0.md  sn107_0.md  sn108_0.md  sn38_0.md  sn39_0.md  sn39_1.md  (+99 more)
tests/: conftest.py  test_statements_to_kg.py
webinterface/: README.md  interface_test01.html
(+322 files in other folders)
