[build-system]

# old:
# setuptools-scm helps to find package-data which is tracked by git
# anyway, make sure the following packages are installed
# pip install build setuptools_scm
# requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]


# make it easier for now
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]


name = "stafo"
description = "..."
authors=[{name = "Carsten Knoll", email = "firstname.lastname@tu-dresden.de"}, {name = "Julius Fiedler", email = "firstname.lastname@tu-dresden.de"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU General Public License v3 (GPLv3)" }

dynamic = ["dependencies", "version"]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]


[project.urls]
# Homepage = "..."

[project.scripts]
stafo = "stafo.cli:main"

[tool.setuptools.packages.find]
# note: `include-package-data = true` by default in pyproject.toml
where = ["src"]

# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#attr
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "stafo.__version__"}

# this siginificantly speeds up pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]